--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 </head>
 <body>
     Вам повисточка!!!!
- <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid possimus a perspiciatis ut eveniet non! Non, nam nesciunt libero fugit quis at, iusto obcaecati aperiam, aliquid perferendis quasi ab architecto.</p>
+ <p>Lorem ipsum dolor sit aewfwefewfwemet consectetur adipisicing elit. Aliquid possimus a perspiciatis ut eveniet non! Non, nam nesciunt libero fugit quis at, iusto obcaecati aperiam, aliquid perferendis quasi ab architecto.</p>
 </body>
 </html>
