--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
     Вам повисточка!!!!
  <p>Lorem ipsum dolor sit aewfwefewfwemet consectetur adipisicing elit. Aliquid possimus a perspiciatis ut eveniet non! Non, nam nesciunt libero fugit quis at, iusto obcaecati aperiam, aliquid perferendis quasi ab architecto.</p>
  <div class="blocs">
-     <div class="box">1</div>
+     <div class="box">1
+        <button class=""></button>
+     </div>
      <div class="box">2</div>
      <div class="box">3</div>
      <div class="box">4</div>
      <div class="box">5</div>
      <div class="box">6</div>
+
  </div>
 </body>
 </html>
