--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
+
+    <div class="menu">
+        <span class="bgmenu"></span>
+    </div>
    <div class="container">
+    
 <header>
     <div class="logo">Logo</div>
     <nav>
@@ -28,7 +32,7 @@
 <div class="catalog">
 
 <div class="box-body">
-     <h1>Hi!</h1>
+
      <div class="boxis">
          <div class="box">
             <h3>hi</h3>
@@ -44,10 +48,9 @@
 </div>
 
 <div class="box-body">
-    <h1>Hi!</h1>
     <div class="boxis">
         <div class="box">
-           <h3>hi</h3>
+            <h3>hi</h3>
            <p>Lorem ipsum dolor sit, 
                amet consectetur adipisicing elit. 
                Aut quis minus voluptatibus aliquid harum l
@@ -61,7 +64,6 @@
 
 
 <div class="box-body">
-    <h1>Hi!</h1>
     <div class="boxis">
         <div class="box">
            <h3>hi</h3>
@@ -77,7 +79,6 @@
 </div>
 
 <div class="box-body">
-    <h1>Hi!</h1>
     <div class="boxis">
         <div class="box">
            <h3>hi</h3>
@@ -97,20 +98,6 @@
   
   
     </div>
-=======
-    Вам повисточка!!!!
- <p>Lorem ipsum dolor sit aewfwefewfwemet consectetur adipisicing elit. Aliquid possimus a perspiciatis ut eveniet non! Non, nam nesciunt libero fugit quis at, iusto obcaecati aperiam, aliquid perferendis quasi ab architecto.</p>
- <div class="blocs">
-     <div class="box">1
-        <button class=""></button>
-     </div>
-     <div class="box">2</div>
-     <div class="box">3</div>
-     <div class="box">4</div>
-     <div class="box">5</div>
-     <div class="box">6</div>
-
->>>>>>> 5fe850eb82d99b448cd29d91a5253f7e781dab4c
  </div>
 </body>
 </html>
