--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body class="body">
+
+    <div class="menu-hover">
+        <ul>
+            <li>Кто ты воин</li>
+            <li>Ахилес</li>
+            <li>Сын аджики</li>
+         
+        </ul>
+        <img width="100%" src="https://steamuserimages-a.akamaihd.net/ugc/1002556983891418863/C54DD3693ADB27CD9E683C4DB77C64C89AD5759A/?imw=512&amp;imh=384&amp;ima=fit&amp;impolicy=Letterbox&amp;imcolor=%23000000&amp;letterbox=true" alt="">
+    </div>
 
     <div class="menu">
         <span class="bgmenu"></span>
@@ -23,11 +33,16 @@
         <li>Gallery</li>
         <li>Contact</li>
     </ul>
+
 </nav>
 <div class="sign">
     <span>Sign up</span>
 </div>
 </header>
+
+<div class="billy">
+    <img src="" alt="">
+</div>
 
 <div class="catalog">
 
@@ -99,5 +114,7 @@
   
     </div>
  </div>
+
+ <script src="/app.js"></script>
 </body>
 </html>
