--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
    <div class="container">
     
 <header>
@@ -90,25 +89,23 @@
     </div>
 </div>
 </div>
-<footer></footer>
+
 <button class="btn"></button>
   
   
     </div>
-=======
-    Вам повисточка!!!!
- <p>Lorem ipsum dolor sit aewfwefewfwemet consectetur adipisicing elit. Aliquid possimus a perspiciatis ut eveniet non! Non, nam nesciunt libero fugit quis at, iusto obcaecati aperiam, aliquid perferendis quasi ab architecto.</p>
- <div class="blocs">
-     <div class="box">1
-        <button class=""></button>
-     </div>
-     <div class="box">2</div>
-     <div class="box">3</div>
-     <div class="box">4</div>
-     <div class="box">5</div>
-     <div class="box">6</div>
-
->>>>>>> 5fe850eb82d99b448cd29d91a5253f7e781dab4c
  </div>
+ <footer>
+    <img class="gachi-img" src="https://img.icons8.com/nolan/64/gachi.png"/>
+    <div class="foot">
+        <ul class="foot-list">
+            <li>Home</li>
+            <li>About</li>
+            <li>Gallery</li>
+            <li>Contact</li>
+        </ul>
+    </div>
+    
+    </footer>
 </body>
 </html>
