--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
         <img width="100%" src="https://steamuserimages-a.akamaihd.net/ugc/1002556983891418863/C54DD3693ADB27CD9E683C4DB77C64C89AD5759A/?imw=512&amp;imh=384&amp;ima=fit&amp;impolicy=Letterbox&amp;imcolor=%23000000&amp;letterbox=true" alt="">
     </div>
 
+
+    <!-- конец сайд бара -->
+
+   
+
     <div class="menu">
         <span class="bgmenu"></span>
     </div>
@@ -40,9 +45,22 @@
 </div>
 </header>
 
-<div class="billy">
-    <img src="" alt="">
-</div>
+
+
+<!-- 
+    сайд бар  -->
+  
+    <div class="slider">
+        <img src="https://avatars.mds.yandex.net/i?id=48cb00a15df349d78c0dab804c1910f4097daa3e-9068434-images-thumbs&n=13" class="slide">
+        <img src="https://phonoteka.org/uploads/posts/2022-09/1663325997_26-phonoteka-org-p-billi-kherrington-art-vkontakte-55.jpg" class="slide">
+        <img src="https://sun9-45.userapi.com/impg/KMzuzd7t2oustApO7tbDlKH7f0bo08T_W1QSEA/PAyBgI3-XKk.jpg?size=604x503&quality=95&sign=42be06a0455e94cbc9fd8c054725b5bf&c_uniq_tag=5KLgWl3-gftZ-nNErc_ph2M7TWPtJtwKseEzuI7ZCD4&type=album" class="slide">
+        <button class="prev">In gym</button>
+        <button class="next">In dungen</button>
+      </div>
+
+
+
+    
 
 <div class="catalog">
 
@@ -108,6 +126,10 @@
     </div>
 </div>
 </div>
+
+
+
+
 
 <button class="btn"></button>
   
