--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@
 
  <script src="/app.js"></script>
  <footer>
-    <img class="gachi-img" src="https://img.icons8.com/nolan/64/gachi.png"/>
+    <!-- <img class="gachi-img" src="https://img.icons8.com/nolan/64/gachi.png"/> -->
     <div class="foot">
         <ul class="foot-list">
+            <li><img class="gachi-img" src="https://img.icons8.com/nolan/64/gachi.png"/></li>
             <li>Home</li>
             <li>About</li>
             <li>Gallery</li>
