добавил bg video

--- a/index.html
+++ b/index.html
@@ -117,6 +117,29 @@
         </div>
 
 
+        </div>
+
+
+
+        <div class="bg">
+
+            <div class="bg_left">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                 Odio aut aperiam, dignissimos quidem consequuntur autem ab 
+                 corporis! Error rerum impedit repellendus minus 
+                officia voluptates dolore, accusamus perspiciatis sequi dolor ipsa.
+
+                <button>Sex</button>
+            </div>
+            <div class="bg_right">
+                <video src="./videoplayback.mp4" autoplay loop></video>
+            </div>
+
+        </div>
+
+
+        <div class="container">
+
         <div class="spisok">
             <ul>
                 <li>
