--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <div class="logo">Logo</div>
             <nav>
                 <ul>
-                    <li><a href="#">В пиве</a></li>
-                    <li><a href="#">твоя</a></li>
+                    <li><a href="index.html">В пиве</a></li>
+                    <li><a href="game.html">твоя</a></li>
                     <li><a href="#">сила и</a></li>
                     <li><a href="#">мудрость</a></li>
 
