--- a/index.html
+++ b/index.html
@@ -58,62 +58,11 @@
             <button class="next">In dungen</button>
         </div>
         <div class="catalog">
-            <div class="box-body">
-                <div class="boxis">
-                    <div class="box">
-                        <h3>hi</h3>
-                        <p>Lorem ipsum dolor sit,
-                            amet consectetur adipisicing elit.
-                            Aut quis minus voluptatibus aliquid harum l
-                            ibero totam magnam velit laborum expedita.
-                        </p>
-                        <button>Перейти</button>
-                    </div>
-
-                </div>
-            </div>
-
-            <div class="box-body">
-                <div class="boxis">
-                    <div class="box">
-                        <h3>hi</h3>
-                        <p>Lorem ipsum dolor sit,
-                            amet consectetur adipisicing elit.
-                            Aut quis minus voluptatibus aliquid harum l
-                            ibero totam magnam velit laborum expedita.
-                        </p>
-                        <button>Перейти</button>
-                    </div>
-                </div>
-            </div>
-            <div class="box-body">
-                <div class="boxis">
-                    <div class="box">
-                        <h3>hi</h3>
-                        <p>Lorem ipsum dolor sit,
-                            amet consectetur adipisicing elit.
-                            Aut quis minus voluptatibus aliquid harum l
-                            ibero totam magnam velit laborum expedita.
-                        </p>
-                        <button>Перейти</button>
-                    </div>
-
-                </div>
-            </div>
-            <div class="box-body">
-                <div class="boxis">
-                    <div class="box">
-                        <h3>hi</h3>
-                        <p>Lorem ipsum dolor sit,
-                            amet consectetur adipisicing elit.
-                            Aut quis minus voluptatibus aliquid harum l
-                            ibero totam magnam velit laborum expedita.
-                        </p>
-                        <button>Перейти</button>
-                    </div>
-
-                </div>
-            </div>
+            <h1>Распорядок дня Billy</h1>
+	<input type="text" id="todoInput">
+	<button onclick="addTodo()">Добавить</button>
+	<ul id="todoList">
+	</ul>
         </div>
 
 
