--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
         </div>
 
 
+
+
+        <div class="game">
+            <div class="game-block"></div>
+        </div>
+
+
         </div>
 
 
@@ -158,8 +165,7 @@
       const app = Vue.createApp({
         data() {
           return {
-            message: 'Привет, мир!',
-            
+            message: 'Привет, мир!', 
           }
         },
 
