--- a/index.html
+++ b/index.html
@@ -70,8 +70,18 @@
 
         <div class="game">
             <div class="game-block"></div>
+            <button onclick="startGame()" class="game-btn">Начать игру</button>
+            <div class="end">
+                <div class="end-text">
+                Браво путник <br>твой уровень:  <br>
+                <span class="result"></span><br>
+                <span class="result-d"></span>
+            </div>
+            </div>
+
         </div>
 
+      
 
         </div>
 
