--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/reset.css">
@@ -8,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body class="body">
     <div id="myModal" class="modal">
         <!-- Содержимое всплывающего окна -->
@@ -59,10 +61,10 @@
         </div>
         <div class="catalog">
             <h1>Распорядок дня Billy</h1>
-	<input type="text" id="todoInput">
-	<button onclick="addTodo()">Добавить</button>
-	<ul id="todoList">
-	</ul>
+            <input type="text" id="todoInput">
+            <button onclick="addTodo()">Добавить</button>
+            <ul id="todoList">
+            </ul>
         </div>
 
 
@@ -73,99 +75,112 @@
             <button onclick="startGame()" class="game-btn">Начать игру</button>
             <div class="end">
                 <div class="end-text">
-                Браво путник <br>твой уровень:  <br>
-                <span class="result"></span><br>
-                <span class="result-d"></span>
-            </div>
-            </div>
-
-        </div>
-
-      
-
-        </div>
-
-
-
-        <div class="bg">
-
-            <div class="bg_left">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                 Odio aut aperiam, dignissimos quidem consequuntur autem ab 
-                 corporis! Error rerum impedit repellendus minus 
-                officia voluptates dolore, accusamus perspiciatis sequi dolor ipsa.
-
-                <button>Sex</button>
-            </div>
-            <div class="bg_right">
-                <video src="./videoplayback.mp4" autoplay loop></video>
+                    Браво путник <br>твой уровень: <br>
+                    <span class="result"></span><br>
+                    <span class="result-d"></span>
+                </div>
             </div>
 
         </div>
 
 
-        <div class="container">
+
+    </div>
+
+
+
+    <div class="bg">
+
+        <div class="bg_left">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            Odio aut aperiam, dignissimos quidem consequuntur autem ab
+            corporis! Error rerum impedit repellendus minus
+            officia voluptates dolore, accusamus perspiciatis sequi dolor ipsa.
+
+            <button>Sex</button>
+        </div>
+        <div class="bg_right">
+            <video src="./videoplayback.mp4" autoplay loop></video>
+        </div>
+
+    </div>
+
+
+    <div class="container">
+
+        <div class="cont-slider">
+            <div class="slider">
+                <button class="btnpre"></button>
+                <img src="" id="thisimg" alt="">
+                <button class="btnnex"></button>
+            </div>
+        </div>
+
+    </div>
+
+
+    <div class="container">
 
         <div class="spisok">
             <ul>
                 <li>
-                  <span class="toggle">Список 1</span>
-                  <ul class="sublist">
-                    <li>Элемент 1</li>
-                    <li>Элемент 2</li>
-                    <li>Элемент 3</li>
-                  </ul>
+                    <span class="toggle">Список 1</span>
+                    <ul class="sublist">
+                        <li>Элемент 1</li>
+                        <li>Элемент 2</li>
+                        <li>Элемент 3</li>
+                    </ul>
                 </li>
 
                 <li>
                     <span class="toggle">Список 1</span>
                     <ul class="sublist">
-                      <li>Элемент 1</li>
-                      <li>Элемент 2</li>
-                      <li>Элемент 3</li>
+                        <li>Элемент 1</li>
+                        <li>Элемент 2</li>
+                        <li>Элемент 3</li>
                     </ul>
-                  </li>
+                </li>
 
-
-                  <li>
-                    <span class="toggle">Список 1</span>
-                    <ul class="sublist">
-                      <li>Элемент 1</li>
-                      <li>Элемент 2</li>
-                      <li>Элемент 3</li>
-                    </ul>
-                  </li>
 
                 <li>
-                  <span class="toggle">Список 2</span>
-                  <ul class="sublist">
-                    <li>Элемент 1</li>
-                    <li>Элемент 2</li>
-                    <li>Элемент 3</li>
-                  </ul>
+                    <span class="toggle">Список 1</span>
+                    <ul class="sublist">
+                        <li>Элемент 1</li>
+                        <li>Элемент 2</li>
+                        <li>Элемент 3</li>
+                    </ul>
                 </li>
-              </ul>
+
+                <li>
+                    <span class="toggle">Список 2</span>
+                    <ul class="sublist">
+                        <li>Элемент 1</li>
+                        <li>Элемент 2</li>
+                        <li>Элемент 3</li>
+                    </ul>
+                </li>
+            </ul>
         </div>
 
 
         <div id="app" class="calk">
-                    {{message}}
+            {{message}}
 
         </div>
 
 
- <script src="/app.js"></script>
- <footer>
-    <!-- <img class="gachi-img" src="https://img.icons8.com/nolan/64/gachi.png"/> -->
-    <div class="foot">
-        <ul class="foot-list">
-            <li><img class="gachi-img" src="https://img.icons8.com/nolan/64/gachi.png"/></li>
-            <li>Home</li>
-            <li>About</li>
-            <li>Gallery</li>
-            <li>Contact</li>
-        </ul>
-    </div>
+        <script src="/app.js"></script>
+        <footer>
+            <!-- <img class="gachi-img" src="https://img.icons8.com/nolan/64/gachi.png"/> -->
+            <div class="foot">
+                <ul class="foot-list">
+                    <li><img class="gachi-img" src="https://img.icons8.com/nolan/64/gachi.png" /></li>
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Gallery</li>
+                    <li>Contact</li>
+                </ul>
+            </div>
     </div>
     <script src="/app.js"></script>
     <footer>
@@ -182,21 +197,28 @@
     <button id="myBtn" onclick="topFunction()">Наверх</button>
 
     <script src="https://unpkg.com/vue@next"></script>
-         <script>
-      const app = Vue.createApp({
-        data() {
-          return {
-            message: 'Привет, мир!', 
-          }
-        },
+    <script>
+        const app = Vue.createApp({
+            data() {
+                return {
+                    message: 'Привет, мир!',
+                }
+            },
 
-        methods: {
-            
-        }
-      })
+            methods: {
 
-      app.mount('#app')
-      </script>
+            }
+        })
+
+        app.mount('#app')
+    </script>
+
+    <script>
+    </script>
+
+
+<script src="./slider.js"></script>
 
 </body>
+
 </html>
