--- a/index.html
+++ b/index.html
@@ -110,9 +110,9 @@
 
         <div class="cont-slider">
             <div class="slider">
-                <button class="btnpre"></button>
+                <button class="btnpre"><</button>
                 <img src="" id="thisimg" alt="">
-                <button class="btnnex"></button>
+                <button class="btnnex">></button>
             </div>
         </div>
 
