--- a/index.html
+++ b/index.html
@@ -113,6 +113,14 @@
                 <button class="btnpre"><</button>
                 <img src="" id="thisimg" alt="">
                 <button class="btnnex">></button>
+                <div class="mini">
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
             </div>
         </div>
 
